# DroneCaptureGym

./: .gitignore  BLOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Dockerfile  README.md  SUBMISSION_BLOG.md  inference.py  openenv.yaml  pyproject.toml
artifacts/eval/: llama31_8b_short.audit.jsonl  llama31_8b_short.jsonl  llama33_70b_meta_short.jsonl  llama33_8b_meta_short.audit.jsonl  llama33_8b_meta_short.jsonl  ppo_final25_summary.json  ppo_step10_summary.json  ppo_vs_base_vs_sft.md  qwen3_32b_nothink_short.jsonl  qwen3_32b_short.jsonl  qwen3_4b_short.jsonl  qwen3_4b_short.summary.json
artifacts/ppo-runs-2026-04-26/: README.md  git-rev.txt
artifacts/ppo-runs-2026-04-26/run01-kl002/: config-snapshot.yaml  decision-log.md
artifacts/ppo-runs-2026-04-26/run02-kl005/: decision-log.md
demo/: README.md  dronekit-bridge-visual-demo.html
docs/: controller-strategy.md  engineering-backlog.md  environment-model-v2.md  grpo-runbook.md  hackathon-submission-readiness-checklist.md  ppo-smoke-runbook.md  rl-mission-task-suite.md  rl-training.md  sft-overfit-audit.md  sft-task-coverage.md  solar-reward-hacks-and-verifier-guards.md  solar-rewards-implementation.md  solar-scenario-research.md  submission-blog.md  submission-hero-flow.mmd  submission-operator-runbook.md  submission-system-flow.md  submission-video-script.md  submission-visualization-share.md
dronecaptureops/: __init__.py
dronecaptureops/agent/: __init__.py  comparison.py  eval_metrics.py  hf_generate_policy.py  hf_inference_policy.py  hf_local_engine.py  llm_policies.py  local_rl_policy.py  messages.py  meta_llama_client.py  observation.py  oracle.py  parser.py  policies.py  prompts.py  rollout.py  schemas.py  spec_aware_policy.py  vllm_policy.py
dronecaptureops/controllers/: __init__.py  base.py  dronekit_sitl_controller.py  geometry_controller.py
dronecaptureops/core/: __init__.py  actions.py  coercion.py  constants.py  environment.py  errors.py  models.py  observations.py  state.py
dronecaptureops/domains/: __init__.py  base.py  bridge.py  construction.py  industrial.py  solar.py
dronecaptureops/evaluation/: __init__.py  benchmark.py  policies.py  rollout.py  suite_runner.py  tracing.py
dronecaptureops/generation/: scenario_generator.py  seeds.py  suites.py
dronecaptureops/rewards/: __init__.py  base.py  capture_quality.py  coverage.py  efficiency.py  report_grounding.py  reward_aggregator.py  safety.py  verifiers.py
dronecaptureops/rich_sim/: __init__.py  scene.py
dronecaptureops/server/: __init__.py
dronecaptureops/simulation/: __init__.py  battery.py  camera.py  geometry.py  safety.py  weather.py  world.py
dronecaptureops/tasks/: __init__.py  solar_tasks.py
dronecaptureops/tools/: __init__.py  camera_tools.py  flight_tools.py  inspection_tools.py  registry.py  report_tools.py
dronecaptureops/utils/: geo_utils.py  logging.py  math_utils.py  serialization.py
eval_outputs/base_vs_sft_report/: base_vs_sft_eval_report.md  base_vs_sft_stats.json
eval_outputs/base_vs_sft_report/raw/: rollouts_base.jsonl  rollouts_sft.jsonl  summary_base.json  summary_sft.json
examples/: run_one_episode.py  run_random_agent.py  run_scripted_agent.py  run_task_suite.py
scripts/: generate-mermaid-share-url.py  inspect_audit.py  plot_sft_training.py  tail_job.py  validate-submission.sh  watch_eval.py
server/: app.py  environment.py  live.py
server/static/: app.js  index.html  styles.css
tests/: test_agent_interface.py  test_benchmark.py  test_camera_physics.py  test_env_utils.py  test_environment_reset.py  test_environment_robustness.py  test_environment_step.py  test_eval_grpo.py  test_eval_metrics.py  test_eval_models.py  test_grpo_loss.py  test_grpo_rollout_pool.py  test_grpo_trainer_cli.py  test_hf_generate_policy.py  test_hf_inference_policy.py  test_hf_jobs.py  test_inference_cli.py  test_model_comparison.py  test_no_hidden_state_leakage.py  test_ppo_loss.py  test_ppo_preflight.py  test_ppo_reporting.py  test_reward_placement.py  test_rewards.py  test_rich_sim_scene.py  test_rich_telemetry.py  test_rollout_tracing.py  test_safety.py  test_scenario_generation.py  test_scenario_suites.py  test_server_app.py  test_server_live.py  test_sft_generation.py  test_sft_warmstart.py  test_solar_task_benchmark.py  test_solar_tasks.py  test_solar_tasks_v2.py  test_tokenization.py  test_tool_calling_surface.py  test_train_grpo.py  (+2 more)
training/: colab_training_template.ipynb  colab_training_template.md  env_utils.py  eval_baseline.py  eval_grpo.py  eval_models.py  eval_policy.py  eval_ppo_adapter.py  generate_sft_data.py  plot_training_metrics.py  qwen3_instruct_training_template.jinja  run_benchmark.py  run_suite.py  sft_warmstart.py  trace_episode.py  train_grpo.py  train_ppo.py
training/configs/: grpo_fast_4b_h200.yaml  grpo_smoke_4b_l40.yaml  grpo_tiny_4b_l40.yaml  grpo_tiny_4b_l40_kl005.yaml  grpo_tiny_4b_l40_kl02.yaml  ppo_run01_kl002.yaml  ppo_run02_kl005.yaml  ppo_short_kl002.yaml  ppo_short_kl005.yaml  ppo_smoke_1p7b_l4.yaml  ppo_smoke_4b_a100.yaml  ppo_tiny_learning_4b.yaml  ppo_tiny_learning_4b_kl005.yaml  ppo_tiny_learning_4b_kl005_l40.yaml  ppo_tiny_learning_4b_kl02.yaml  ppo_tiny_learning_4b_kl02_l40.yaml  ppo_train_default.yaml  rl_default.yaml  sft_default.yaml  sft_train_default.yaml
training/grpo/: __init__.py  config.py  loss.py  reporting.py  rollout_pool.py  trainer.py
training/hf_jobs/: README.md  __init__.py  entrypoint.py  job_specs.py  launch.py  push_artifacts.py
training/ppo/: __init__.py  config.py  loss.py  preflight_vllm.py  reporting.py  reward_placement.py  rollout_pool.py  tokenization.py  trainer.py
