[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dronecaptureops-gym"
version = "0.1.0"
description = "OpenEnv-compatible aerial inspection environment for high-level drone capture operations"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.3",
  "pydantic>=2.10",
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
train = [
  "accelerate>=1.10",
  "datasets>=4.0",
  # peft 0.19.x added `from transformers.conversion_mapping import ...` which
  # only exists in transformers 4.58+ / 5.x, and the HF transformers-pytorch-gpu
  # image ships an older transformers that even pip's >=4.55 upgrade doesn't
  # bring up to that. Pin peft to 0.18.x (last release without that import).
  "peft>=0.17,<0.19",
  # TRL 1.2.0 added a strict requirement that the tokenizer's chat template
  # contain `{% generation %}` markers for assistant_only_loss masking. The
  # Qwen3 chat template doesn't have them. TRL 1.1.x still supports the
  # legacy response_template-based masking that our config relies on.
  "trl>=0.23.1,<1.2",
  "torch>=2.4",
  "transformers>=4.55",
  "wandb>=0.18",
]
ppo = [
  "accelerate>=1.10",
  "datasets>=4.0",
  # Sync pins with the [train] extras (SFT learned these the hard way):
  # - peft 0.19+ imports `transformers.conversion_mapping` (only in tx 4.58+/5.x)
  # - TRL 1.2+ requires {% generation %} markers in chat template
  # - transformers 4.55+ has the conversion_mapping module
  "peft>=0.17,<0.19",
  "trl>=0.23.1,<1.2",
  "torch>=2.4",
  "transformers>=4.55",
  # vLLM 0.11.x makes the V1 engine default; V1's msgspec serializer rejects
  # our LoRARequest format → rollouts hang at 0/16. Solution: KEEP 0.11.x
  # (its V0 engine init works on H200) but force V0 via VLLM_USE_V1=0 env.
  # Tried 0.10.x — its init hits CUDA Error 802 "system not yet initialized"
  # on H200 after PyTorch already initialized CUDA. 0.11.2's init is robust.
  "vllm>=0.11.0,<0.12.0",
  "wandb>=0.18",
]

[project.scripts]
server = "server.app:main"
dronecaptureops-server = "server.app:main"
dronecaptureops-run-suite = "training.run_suite:main"
dronecaptureops-trace-episode = "training.trace_episode:main"
dronecaptureops-run-benchmark = "training.run_benchmark:main"
dronecaptureops-train-ppo = "training.train_ppo:main"
dronecaptureops-eval-policy = "training.eval_policy:main"

[tool.setuptools.packages.find]
include = ["dronecaptureops*", "server*"]
exclude = ["tests*", "training*", "examples*", "docs*", "artifacts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
