[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dronecaptureops-gym"
version = "0.1.0"
description = "OpenEnv-compatible aerial inspection environment for high-level drone capture operations"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.3",
  "pydantic>=2.10",
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
train = [
  "accelerate>=1.10",
  "datasets>=4.0",
  # peft 0.19.x added `from transformers.conversion_mapping import ...` which
  # only exists in transformers 4.58+ / 5.x, and the HF transformers-pytorch-gpu
  # image ships an older transformers that even pip's >=4.55 upgrade doesn't
  # bring up to that. Pin peft to 0.18.x (last release without that import).
  "peft>=0.17,<0.19",
  # TRL 1.2.0 added a strict requirement that the tokenizer's chat template
  # contain `{% generation %}` markers for assistant_only_loss masking. The
  # Qwen3 chat template doesn't have them. TRL 1.1.x still supports the
  # legacy response_template-based masking that our config relies on.
  "trl>=0.23.1,<1.2",
  "torch>=2.4",
  "transformers>=4.55",
  "wandb>=0.18",
]
ppo = [
  "accelerate>=1.10",
  "datasets>=4.0",
  # Sync pins with the [train] extras (SFT learned these the hard way):
  # - peft 0.19+ imports `transformers.conversion_mapping` (only in tx 4.58+/5.x)
  # - TRL 1.2+ requires {% generation %} markers in chat template
  # - transformers 4.55+ has the conversion_mapping module
  "peft>=0.17,<0.19",
  "trl>=0.23.1,<1.2",
  "torch>=2.4",
  "transformers>=4.55",
  # vLLM 0.11.2 V1 engine has a wire-protocol race in `process_input_sockets`
  # that kills the IPC worker mid-rollout (seen in v1 as
  # `msgspec.ValidationError: Expected array, got int`, in fix5 as
  # `ValueError: b'\x00\x00' is not a valid EngineCoreRequestType`). After the
  # thread dies the API layer keeps accepting "Adding requests" but no rollout
  # ever processes — ~$15 burned chasing this in 0.11.2.
  # 0.17.x has 5 months of post-0.11.2 V1+LoRA fixes. Same torch (2.9→2.10
  # patch bump), same transformers ≥4.56, same pydantic ≥2.12 as 0.11.2 —
  # zero additional dependency pressure. Skipping 0.20.x because its CUDA 13.0
  # wheel default conflicts with the HF container's CUDA 12.x driver.
  "vllm>=0.17.0,<0.18.0",
  "wandb>=0.18",
]

[project.scripts]
server = "server.app:main"
dronecaptureops-server = "server.app:main"
dronecaptureops-run-suite = "training.run_suite:main"
dronecaptureops-trace-episode = "training.trace_episode:main"
dronecaptureops-run-benchmark = "training.run_benchmark:main"
dronecaptureops-train-ppo = "training.train_ppo:main"
dronecaptureops-eval-policy = "training.eval_policy:main"

[tool.setuptools.packages.find]
include = ["dronecaptureops*", "server*"]
exclude = ["tests*", "training*", "examples*", "docs*", "artifacts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
