[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dronecaptureops-gym"
version = "0.1.0"
description = "OpenEnv-compatible aerial inspection environment for high-level drone capture operations"
requires-python = ">=3.11"
dependencies = [
  "openenv-core>=0.2.3",
  "pydantic>=2.10",
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn>=0.30",
  "openai>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
train = [
  "accelerate>=1.10",
  "datasets>=4.0",
  "matplotlib>=3.8",
  "peft>=0.17",
  "tensorboard>=2.16",
  "trl>=0.23.1",
]

[project.scripts]
server = "server.app:main"
dronecaptureops-server = "server.app:main"
dronecaptureops-run-suite = "training.run_suite:main"
dronecaptureops-trace-episode = "training.trace_episode:main"
dronecaptureops-run-benchmark = "training.run_benchmark:main"

[tool.setuptools.packages.find]
include = ["dronecaptureops*", "server*"]
exclude = ["tests*", "training*", "examples*", "docs*", "artifacts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
